<resources>
    <string name="app_name">App Ftur</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_activity2">HomeActivity</string>
    <string name="title_activity_netmap">NetmapActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_maintenance">Maintenance</string>
    <string name="title_activity_scanlog">ScanlogActivity</string>
    <string-array name="tables_array">
        <item>article_catalog</item>
        <item>article_feature</item>
        <item>batch_blacklist</item>
        <item>construction_site</item>
        <item>customer</item>
        <item>customer_incident_type</item>
        <item>customer_supplier</item>
        <item>installer</item>
        <item>lang</item>
        <item>license</item>
        <item>operator</item>
        <item>ordernr_sites</item>
        <item>pda_data_type</item>
        <item>pda_sec_id_data</item>
        <item>pda_settings</item>
        <item>pdf</item>
        <item>process_type</item>
        <item>status_name</item>
        <item>supplier</item>
        <item>t_ddd_lab</item>
        <item>t_ddd_werk</item>
        <item>translation</item>
        <item>user</item>
        <item>user_log</item>
        <item>wm_serial</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_manual_login">ManualLoginActivity</string>
    <string name="title_activity_ecard">EcardActivity</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="slct_job">
    <item>article_catalog</item>
    <item>article_feature</item>
    <item>batch_blacklist</item>
    </string-array>

    <!--General Buttons-->
    <string name="ib_confirmData">SUBMIT\nDATA</string>
    <string name="ib_resetData">DELETE</string>
    <string name="ib_cancel">DELETE</string>
    <string name="ib_confirm">SUBMIT</string>
    <string name="ib_scanQr">SCAN\nQR CODE</string>


    <string name="title_activity_geo_position">GeoPositionActivity</string>
    <string name="title_activity_installation_data">InstallationDataActivity</string>
    <string name="title_activity_welding">WeldingActivity</string>
    
    <!--jobDataACtivity-->
    <string name="tv_weldingCertificate">Welder Certificate</string>
    <string name="tv_jobNumber">Job no</string>
    <string name="tv_siteName">Site Name</string>
    <string name="ib_scanJobQr">SCAN\nJOB QR</string>
    
    <!--wmSerialActivity-->
    <string name="ib_scanWmSerial">SCAN\nWM SERIAL</string>
    <string name="tv_infoWeldingData">ADD THE WELDING DATA FOR THIS PRODUCT</string>
    <string name="tv_fusionNumber">Fusion no :</string>
    <string name="tv_wmSerial">WM Serial no :</string>
    <!--ManualLoginACtivity-->
    <string name="tv_infoLogin">Please type in your Login</string>

    <!--GeoPositionActivity-->
    <string name="ib_confirmCoordonate">SUBMIT\nCOORDONATES</string>
    <string name="tv_lat">Lat :</string>
    <string name="tv_lon">Lon :</string>
    <string name="tv_currentGeoPosition">CURRENT PDA GEO POSITION</string>
    <string name="ib_refreshMap">REFRESH\nMAP</string>
    <string name="ib_switchMode">SWITCH\nMODE</string>

    <!--Header-->
    <string name="tv_userName">User Name</string>
    <string name="tv_compagnyName">Compagny Name</string>
    <string name="tv_lastSyncDate">Last Sync Date</string>
    <string name="tv_syncDate">01/07/2015 15:36</string>

    <!--Footer-->

    <string name="tv_home">HOME</string>
    <string name="tv_login">LOGIN</string>
    <string name="tv_scan">SCAN</string>
    <string name="tv_settings">SETTINGS</string>


    <!-- HOME -->

    <string name="tv_jobDataTitle">JOB DATA</string>
    <string name="tv_installationDataTitle">INSTALLATION\nDATA</string>
    <string name="tv_geoPositionTitle">GEO\nPOSITION</string>
    <string name="tv_weldingTitle">WELDING</string>
    <string name="tv_picturesTitle">PICTURES</string>
    <string name="tv_commentTitle">COMMENT</string>
    <string name="tv_installationManualTitle">INSTALLATION\nMANUAL</string>
    <string name="tv_serverUpdatesTitle">SERVER\nUPDATES</string>
    <string name="title_activity_installation_manual">InstallationManualActivity</string>
    <string name="unrelevant">Unrelevant</string>
    <string name="valid_qr">Please scan a valid QR Code</string>

    <!-- Installation Data -->

    <string name="ib_linkProduct">LINK\nPRODUCT</string>
    <string name="title_activity_sec_id_data">SecIdDataActivity</string>
    <string name="invalid_scan">Invalid scan, please try again</string>
    <string name="tv_infoInstall">CLICK ON SUBMIT TO SAVE DATA</string>
    <string name="tv_infoInstall2">CLICK ON LINK PRODUCTS\nFOR ADDITIONAL DATA</string>
    <string name="tv_sketchNr">Sketch no:</string>
    <string name="tv_trenchDepth">Trench depth:</string>
    <string name="title_activity_installation_data2">InstallationData2Activity</string>
    <string name="tv_infoInstall3">PLEASE SCAN A TRACEABILITY BARCODE\nOR CLICK ON SCAN QR CODE</string>
    <string name="tv_infoInstall4">SUBMIT WHEN DONE</string>
    <string name="tv_l1">L1 =</string>
    <string name="tv_l2">L2 =</string>
    <string name="tv_l3">L3 =</string>
    <string name="tv_l4">L4 =</string>

    <!--CommentActivity-->
    <string name="title_activity_comment">CommentActivity</string>
    <string name="ib_addPicture">ADD\nPICTURE</string>
    <string name="ib_sendEmail">SEND\nBY EMAIL</string>
    <string name="title_activity_pictures">PicturesActivity</string>
    <string name="title_activity_zoom">ZoomActivity</string>
    <string name="file_deleted">File deleted</string>
    <string name="inserted">Inserted</string>
    <string name="title_activity_comment_list">CommentList</string>
    <string name="title_activity_read_comment">ReadComment</string>
    <string name="back">BACK</string>
    <string name="title_activity_init">InitActivity</string>

    <!-- CommentListActivity -->
    <string name="ib_addComment">ADD\nCOMMENT</string>
    <string name="no_network">No network available</string>
    <string name="title_activity_video_view">VideoViewActivity</string>
    <string name="title_activity_welding_bluetooth">WeldingBluetoothActivity</string>
    
    <!-- WeldingActivity / WeldingBluetooth Activity -->
    <string name="ib_bluetoothSettings">BLUETOOTH\nSETTINGS</string>
    <string name="ib_scanFusion">SCAN\nFUSION</string>
    <string name="ib_startFusion">START\nFUSION</string>
    <string name="ib_confirmDone">CONFIRM\nDONE</string>
    <string name="ib_cancelProtocol">CANCEL\nPROTOCOL</string>
    <string name="ib_receiveProtocol">RECEIVE\nPROTOCOL</string>
    <string name="ib_addNewWelding">ADD NEW\nWELDING</string>
    <string name="tv_setFusionParam1">CLICK ON SCAN BUTTON ON THE SIDE OF THE DEVICE\nTO SET UP NEW FUSION PARAMETERS</string>
    <string name="tv_fusionCode">Fusion Code</string>
    <string name="tv_startFusion">CLICK ON START FUSION\nTO BEGIN WELDING PROCESS</string>
    <string name="tv_receiveProtocole">CLICK ON RECEIVE PROTOCOL\nIF MANDATORY OR ON CANCEL IF NOT</string>
    <string name="tv_dataSent">DATA SENT</string>
    <string name="tv_protocolOk">PROTOCOL OK</string>
    <string name="tv_protocolWait">PROTOCOL ?</string>
    <string name="tv_noProtocol">NO PROTOCOL</string>
    <string name="tv_confirmWeldings">CONFIRM ALL WELDINGS DONE OR\nCLICK ON ADD NEW WELDING</string>
    <string name="tv_processDone">CURRENT WELDING PROCESS\nIS NOW DONE AND SAVED</string>
    <string name="data_synchronized">Data synchronized</string>
    <string name="exit">EXIT</string>

</resources>
