<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.rartonne.appftur.InstallationData2Activity">

    <!-- Header aligned to top -->

    <include layout="@layout/header" />

    <!-- header aligned to bottom -->

    <include layout="@layout/article_header" />

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="245px"
        >

        <RelativeLayout
            android:id="@+id/rel_product1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View
                android:layout_width="fill_parent"
                android:layout_height="50px"
                android:background="#1965a3"
                android:id="@+id/bar_product1"/>

            <EditText
                android:background="@null"
                android:layout_width="150px"
                android:layout_height="45px"
                android:layout_marginTop="5px"
                android:layout_marginLeft="300px"
                android:id="@+id/et_length1"
                android:textColor="#ffffff"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="?"
                android:id="@+id/tvproduct1"
                android:textColor="#ffffff"
                android:layout_marginLeft="30px"
                android:layout_marginTop="10px"
                android:textSize="30px"
                android:layout_alignLeft="@+id/bar_product1"
                android:layout_alignTop="@+id/bar_product1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_l1"
                android:id="@+id/tv_l1"
                android:textColor="#ffffff"
                android:layout_marginTop="10px"
                android:textSize="30px"
                android:layout_marginLeft="200px"/>

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rel_product2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_product1"
            android:layout_marginTop="2px"
            >

            <View
                android:layout_width="fill_parent"
                android:layout_height="50px"
                android:background="#1965a3"
                android:id="@+id/bar_product2"/>



            <EditText
                android:background="@null"
                android:layout_width="150px"
                android:layout_height="45px"
                android:layout_marginTop="5px"
                android:layout_marginLeft="300px"
                android:id="@+id/et_product2"
                android:textColor="#ffffff"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="?"
                android:id="@+id/tv_product2"
                android:textColor="#ffffff"
                android:layout_marginTop="10px"
                android:textSize="30px"
                android:layout_marginLeft="30px"
                android:layout_alignLeft="@+id/bar_product2"
                android:layout_alignTop="@+id/bar_product2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_l2"
                android:id="@+id/tv_l2"
                android:textColor="#ffffff"
                android:layout_marginTop="10px"
                android:textSize="30px"
                android:layout_marginLeft="200px"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rel_products3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rel_product2"
            >

            <View
                android:layout_width="fill_parent"
                android:layout_height="50px"
                android:layout_marginTop="2px"
                android:background="#1965a3"
                android:id="@+id/bar_product3"/>

            <EditText
                android:background="@null"
                android:layout_width="150px"
                android:layout_height="45px"
                android:layout_marginTop="5px"
                android:layout_marginLeft="300px"
                android:id="@+id/et_product3"
                android:textColor="#ffffff"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="?"
                android:id="@+id/tv_product3"
                android:textColor="#ffffff"
                android:layout_marginLeft="30px"
                android:layout_marginTop="10px"
                android:textSize="30px"
                android:layout_alignLeft="@+id/bar_product3"
                android:layout_alignTop="@+id/bar_product3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_l3"
                android:id="@+id/tv_l3"
                android:textColor="#ffffff"
                android:layout_marginTop="10px"
                android:textSize="30px"
                android:layout_marginLeft="200px"/>

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rel_products4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_products3"
            android:layout_marginTop="2px"
            >

            <View
                android:layout_width="fill_parent"
                android:layout_height="50px"
                android:background="#1965a3"
                android:id="@+id/bar_product4"/>



            <EditText
                android:background="@null"
                android:layout_width="150px"
                android:layout_height="45px"
                android:layout_marginTop="5px"
                android:layout_marginLeft="300px"
                android:id="@+id/et_product4"
                android:textColor="#ffffff"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_l4"
                android:id="@+id/tv_l4"
                android:textColor="#ffffff"
                android:layout_marginTop="10px"
                android:textSize="30px"
                android:layout_marginLeft="200px"
                android:layout_alignLeft="@+id/bar_product4"
                android:layout_alignTop="@+id/bar_product4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="?"
                android:id="@+id/tv_product4"
                android:textColor="#ffffff"
                android:layout_marginTop="10px"
                android:textSize="30px"
                android:layout_marginLeft="30px"
                android:layout_alignLeft="@+id/bar_product4"
                android:layout_alignTop="@+id/bar_product4"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_infoInstall"
            android:layout_below="@+id/rel_products4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5px"
            android:text="@string/tv_infoInstall3"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_infoInstall2"
            android:text="@string/tv_infoInstall4"
            android:textStyle="bold"
            android:textSize="20px"
            android:layout_marginTop="10px"
            android:textColor="#000000"
            android:layout_below="@+id/et_infoInstall"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_infoInstall2"
            android:id="@+id/rel_buttonPart2"
            android:layout_marginTop="5px"
            android:layout_marginLeft="30px">

            <RelativeLayout
                android:id="@+id/rel_btn_reset2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    style="@style/icon_style"
                    android:id="@+id/Btn_resetPart2"
                    android:src="@drawable/Icon_Reset"/>
                <TextView
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ib_resetData"
                    android:textColor="#000000"
                    android:layout_below="@+id/Btn_resetPart2"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_btn_link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <ImageButton
                    style="@style/icon_style"
                    android:id="@+id/Btn_link2"
                    android:src="@drawable/icon_scan_qr"/>
                <TextView
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ib_scanQr"
                    android:textColor="#000000"
                    android:layout_below="@+id/Btn_link2"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="320px">

                <ImageButton
                    style="@style/icon_style"
                    android:id="@+id/Btn_submitPart2"
                    android:src="@drawable/action_confirm"/>
                <TextView
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ib_confirmData"
                    android:textColor="#000000"
                    android:layout_below="@+id/Btn_submitPart2"/>

            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>
    <!-- Footer aligned to bottom -->

    <include layout="@layout/footer" />
</RelativeLayout>